--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -9,8 +10,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  /* font-family: 'Playfair Display', serif; */
   scroll-behavior: smooth;
   color-scheme: dark;
+}
+
+.headtext{
+  font-family: 'Playfair Display', serif;
 }
 
 .hash-span {
@@ -116,6 +122,7 @@
 
 /* canvas- styles */
 .canvas-loader {
+  margin-top: 100px;
   font-size: 10px;
   width: 1em;
   height: 1em;
@@ -124,6 +131,7 @@
   text-indent: -9999em;
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
+
 }
 
 @keyframes mulShdSpin {
