designing hero section

--- a/src/index.css
+++ b/src/index.css
@@ -49,11 +49,42 @@
   );
 }
 
+
+
 .green-pink-gradient {
   background: "#00cea8";
   background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
   background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
 }
+
+.blue-pink-gradient {
+  background: "#0089ce";
+  background: linear-gradient(90.13deg, #0089ce 1.9%, #bf61ff 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #0089ce 1.9%, #bf61ff 97.5%);
+}
+
+
+
+
+
+
+.purple-blue-gradient {
+  background: #667eea; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #667eea,
+    #764ba2,
+    #20023d
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #667eea,
+    #764ba2,
+    #20023d
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+
 
 .orange-text-gradient {
   background: #f12711; /* fallback for old browsers */
@@ -70,6 +101,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 
 .green-text-gradient {
   background: #11998e; /* fallback for old browsers */
